--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -250,6 +250,7 @@
                 android:orientation="vertical"></LinearLayout>
 
             <TextView
+                android:id="@+id/forgetPass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
