--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -42,113 +42,119 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.183">
+        app:layout_constraintVertical_bias="0.282">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="3dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:text="Mobile No  "
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="22dp"
-                android:textStyle="bold|italic" />
+                android:layout_gravity="center"
+                app:cardCornerRadius="100dp">
 
-            <EditText
-                android:id="@+id/mobile"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/gmail">
+
+                </ImageView>
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="330dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:maxLength="10"
-                android:inputType="number" />
+                android:layout_marginLeft="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/newEmailId"
+                    android:layout_width="330dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter your email"
+                    android:textColorHint="@color/white"></com.google.android.material.textfield.TextInputEditText>
+            </com.google.android.material.textfield.TextInputLayout>
+
+
         </LinearLayout>
 
-        <Button
-            android:id="@+id/sendOtp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Send OTP"
-            android:onClick="sendOtp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
-            android:id="@+id/otpLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:text="OTP  "
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="22dp"
-                android:textStyle="bold|italic" />
+                android:layout_gravity="center"
+                app:cardCornerRadius="100dp">
 
-            <EditText
-                android:id="@+id/otp"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/reset">
+
+                </ImageView>
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="330dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="number" />
-        </LinearLayout>
+                android:layout_marginLeft="5dp"
+                app:counterMaxLength="9">
 
-        <Button
-            android:id="@+id/verifyOtp"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/newPassword"
+                    android:layout_width="330dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter your new password"
+                    android:textColorHint="@color/white"
+                    android:maxLength="9"></com.google.android.material.textfield.TextInputEditText>
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/ff_farm_tools_equip_borders"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.552">
+
+        <TextView
+            android:id="@+id/resetBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Verify OTP"
-            android:onClick="verifyOtp"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/newPasswordLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="New Password  "
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="22dp"
-                android:textStyle="bold|italic" />
-
-            <EditText
-                android:id="@+id/newPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPassword" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/resetPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+android:layout_marginTop="8dp"
+            android:layout_marginLeft="45dp"
             android:text="Reset Password"
-            android:onClick="resetPassword"
-            android:visibility="gone" />
+            android:textAlignment="center"
+            android:textColor="#030BAE"
+            android:textSize="30dp"
+            android:textStyle="italic|bold"
+            app:layout_constraintVertical_bias="0.668"></TextView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
